--- a/src/Components/Discover/Discover.module.css
+++ b/src/Components/Discover/Discover.module.css
@@ -1,6 +1,6 @@
 .discover__container {
   max-width: 1440px;
-  margin: auto;
+  margin-bottom: 3rem;
   padding-inline: 7.5rem;
   display: flex;
   justify-content: space-between;
@@ -27,4 +27,31 @@
 
 .arrow__btn:hover {
   background-color: #d0cbff;
+}
+
+.carousel__box {
+  max-width: 1440px;
+  margin: 0 auto;
+  height: 30rem;
+}
+
+.carousel__box ul {
+  display: flex !important;
+  margin: 0 auto !important;
+}
+
+.carousel__box li {
+  width: 230px !important;
+  margin-right: 6rem;
+}
+
+.slide__card {
+  display: flex;
+  width: 230px;
+  margin: 0 auto;
+}
+.slide__img {
+  width: 30rem;
+  height: 20rem;
+  cursor: pointer;
 }
