--- a/src/App.css
+++ b/src/App.css
@@ -9,6 +9,25 @@
   src: url(./Assets/Satoshi-font/Satoshi-Black.otf) format("opentype");
 }
 
+@font-face {
+  font-family: "Satoshi";
+  src: url(./Assets/Satoshi-font/Satoshi-Bold.otf) format("opentype");
+  font-weight: bold;
+  font-style: normal;
+}
+@font-face {
+  font-family: "Satoshi";
+  src: url(./Assets/Satoshi-font/Satoshi-Medium.otf) format("opentype");
+  font-weight: medium;
+  font-style: normal;
+}
+@font-face {
+  font-family: "Satoshi";
+  src: url(./Assets/Satoshi-font/Satoshi-Regular.otf) format("opentype");
+  font-weight: normal;
+  font-style: normal;
+}
+
 html {
   font-size: 10px;
   font-family: "Satoshi";
