--- a/src/Components/Recommended/Recommended.module.css
+++ b/src/Components/Recommended/Recommended.module.css
@@ -14,29 +14,27 @@
 .recommended__grid {
   display: grid;
   grid-template-columns: repeat(4, 1fr);
-  justify-items: center;
   margin-top: 3rem;
+  gap: 2rem;
 }
 
 .recommended__card {
-  position: relative;
-  border: 1px solid #ccc;
-  border-radius: 15px;
-  width: 280px;
-  height: 250px;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  aspect-ratio: 1 / 1;
+  background: black;
   overflow: hidden;
-  cursor: pointer;
-  margin-bottom: 30px;
+  border-radius: 20px;
+  position: relative;
+  object-fit: contain;
 }
 
 .recommended__card:hover {
   box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
+  cursor: pointer;
 }
 
 .recommended__img {
+  height: 100%;
   width: 100%;
-  height: auto;
 }
 
 .recommended__img:hover {
