--- a/src/Components/Discover/Discover.module.css
+++ b/src/Components/Discover/Discover.module.css
@@ -60,6 +60,7 @@
 .slide__card {
   padding: 8px;
   position: relative;
+  display: flex;
 }
 .slide__img {
   width: 100%;
@@ -71,7 +72,7 @@
 
 .slide__h3 {
   position: absolute;
-  bottom: 11px;
+  bottom: 8px;
   width: 96%;
   background-color: rgba(0, 0, 0, 0.5);
   color: white;
