--- a/src/Components/Info/Info.module.css
+++ b/src/Components/Info/Info.module.css
@@ -3,13 +3,20 @@
   align-items: center;
   justify-content: center;
   flex-direction: column;
-  z-index: 1;
+  z-index: 1000;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
 }
 
 .book__container {
   width: 45rem;
   border-radius: 50px;
   padding: 4rem;
+  background-color: #fff;
 }
 
 .book__header {
@@ -25,6 +32,30 @@
 
 .cross__img {
   cursor: pointer;
+  padding: 0.5rem;
+}
+
+.cross__img:hover {
+  background-color: #b4b0da;
+}
+
+.flag__box {
+  position: relative;
+  margin-right: 20px;
+  display: block;
+}
+
+.flag__icon {
+  width: 20px;
+  height: auto;
+  margin-right: 20px;
+  position: absolute;
+  top: 16px;
+  left: 10px;
+}
+
+.phone__input {
+  padding-left: 35px;
 }
 
 .book__text {
